--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ body,html{
   z-index:2;
   background-color: #fff;
   position:fixed;
-  display:flex;
+  display:none;
   flex-direction: column;
   top:55px;
   right:60px;
